- Fixed bug #43200 (Interface implementation / inheritence not possible in abstract classes)